--- a/app/assets/stylesheets/mixins/buttons.scss
+++ b/app/assets/stylesheets/mixins/buttons.scss
@@ -9,6 +9,7 @@
 
 @mixin regular-button($color: $brand) {
   @include button($background: $color);
+  @include inverted-selection;
   @extend %button;
 }
 
